; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_post_Nm.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_post_Nm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.roff_node = type { i32 }

@MD_Bk = common dso_local global i32 0, align 4
@outflags = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.roff_node*)* @md_post_Nm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @md_post_Nm(%struct.roff_node* %0) #0 {
  %2 = alloca %struct.roff_node*, align 8
  store %struct.roff_node* %0, %struct.roff_node** %2, align 8
  %3 = load %struct.roff_node*, %struct.roff_node** %2, align 8
  %4 = getelementptr inbounds %struct.roff_node, %struct.roff_node* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %14 [
    i32 130, label %6
    i32 128, label %11
    i32 129, label %11
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @MD_Bk, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* @outflags, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* @outflags, align 4
  br label %15

11:                                               ; preds = %1, %1
  %12 = load %struct.roff_node*, %struct.roff_node** %2, align 8
  %13 = call i32 @md_post_raw(%struct.roff_node* %12)
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %11, %6
  ret void
}

declare dso_local i32 @md_post_raw(%struct.roff_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
